fixes hero title size on small screens

--- a/_development/styles/2-modules/flexible-content/_hero.scss
+++ b/_development/styles/2-modules/flexible-content/_hero.scss
@@ -38,7 +38,7 @@
                 text-align: center;
         
                 h1 {
-                    font-size: em(60);
+                    font-size: em(30);
                 }
         
                 p {
